--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,18 @@
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background-color: lightblue;
-}
-
-header {
-  display: flex;
+* {
+  box-sizing: border-box;
 }
 
 nav {
   display: flex;
-  width: 100%;
-  background-color: slategrey;
-  box-shadow: 0px 8px 10px black;
-}
-
-nav h1 {
-  justify-content: flex-start;
-  margin-left: 3%;
-  align-items: center;
+  height: 5vh;
+  width: 100vw;
 }
 
 nav ul {
-  flex-grow: 2;
-  align-items: center;
   display: flex;
-  list-style: none;
-  justify-content: flex-end;
 }
 
 nav li {
-  text-decoration: none;
-  padding: 0 4%;
-  font-size: 20px;
-  font-weight: bold;
-  border-left: solid 1px black;
+  display: flex;
+  justify-items: flex-end;
 }
