--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
-* {
+html {
   box-sizing: border-box;
+  background-color: #f3f3f3;
+  color: #262322;
 }
 
 nav {
@@ -9,10 +11,29 @@ nav {
 }
 
 nav ul {
+  width: 50%;
   display: flex;
+  align-items: center;
+  margin-left: 68vw;
 }
 
-nav li {
-  display: flex;
-  justify-items: flex-end;
+nav ul li {
+  list-style: none;
+  padding: 1vh 3vw;
+  font-size: 24px;
+  height: 100%;
+}
+
+nav a {
+  color: #262322;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#landing-text {
+  flex-grow: 1;
+  font-size: 60px;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
 }
